<resources>
    <string name="app_name">Intergram</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="hint_username">Nombre de Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Login</string>
    <string name="dont_have_account">No tienes cuenta?</string>
    <string name="create_here">Crea una aquí</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_password_creataccount">Constraseña</string>
    <string name="hint_confirm_password">Confirmar contraseña</string>
    <string name="text_button_createaccount">Únete</string>
    <string name="toolbar_tittle_createaccount">Crear Cuenta</string>
    <string name="username_card">Uriel Remirez</string>
    <string name="firstword_card">Hace</string>
    <string name="timecar_card">4 días</string>
    <string name="likenumbercar_card">10 Me gusta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="itemsearch">Buscar</string>
    <string name="itemhome">Inicio</string>
    <string name="itemprofile">Perfil</string>
    <string name="secondword_detail">Me gusta</string>
    <string name="titleimage_datail">\"Todo pasa en la vida\"</string>
    <string name="content_maravilla">\"Todos somos breves inquilinos es este mundo imperfecto lleno de cosas maravillosas. No hay que tenerle miedo a los años, sino a la vida no vivida, a los años vacíos huecos de emociones, de triunfos y por qué no, también de fracasos nunca experimentados. Esos de los que tanto aprendemos.\"</string>
    <string name="transationname_picture">trasitionnamepicture</string>
    <string name="searchhinttext">Buscar</string>
</resources>
